Practice Programs/error.txt
Executing script: C:\Users\Logan\Documents\Python\functions.py
Script arguments: 
Output:
  File "C:\Users\Logan\Documents\Python\functions.py", line 12
    return result;
    ^
SyntaxError: 'return' outside function

